--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Arpit Srivastava</div>
-                <div class="text-3">And I'm a <span>Software Engineer in Verifone</span></div>
-                <a href="https://drive.google.com/file/d/1g1h6V1DYVtM0i9vUtfjpcWIukB1T6qQz/view?usp=sharing" target="_blank">Know More!</a>
-                <a href="https://github.com/ArpitSrivastava24" target="_blank"><img src="images/github-logo.png" alt="" height="23px" width="23px"></a>
-                <a href="https://www.linkedin.com/in/arpit-s-7585b6184" target="_blank"><img src="images/linkedin.png" alt="" height="23px" width="23px"></a>
-                <a href="https://leetcode.com/u/Arpit___24/" target="_blank"><img src="images/leetcode.png" alt="" height="23px" width="23px"></a>
+                <div class="text-3">And I'm a <span>Software Engineer 2 in Blue Yonder</span></div>
+                <a href="https://bit.ly/46aIMs9" target="_blank" class="cta-button">Know More!</a>
+                <div class="social-links">
+                    <a href="https://github.com/ArpitSrivastava24" target="_blank" class="social-icon"><img src="images/github-logo.png" alt="GitHub" title="GitHub Profile"></a>
+                    <a href="https://www.linkedin.com/in/arpit-srivastava0395/" target="_blank" class="social-icon"><img src="images/linkedin.png" alt="LinkedIn" title="LinkedIn Profile"></a>
+                    <a href="https://leetcode.com/u/Arpit___24/" target="_blank" class="social-icon"><img src="images/leetcode.png" alt="LeetCode" title="LeetCode Profile"></a>
+                </div>
             </div>
         </div>
     </section>
@@ -59,21 +61,10 @@
                     <img src="images/ArpitNew.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Arpit and I'm a <span>Software Engineer in Verifone</span></div>
+                    <div class="text">I'm Arpit and I'm a <span>Software Engineer in Blue Yonder</span></div>
                     <p>
-                        Greetings! Originally hailing from Varanasi,
-                        I ventured into the dynamic world of technology armed with a B.Tech in Computer Science
-                        from the renowned Kanpur Institute Of Technology in 2021.
-
-                        My current expedition finds me as a Software Engineer at Verifone, a trailblazer
-                        in electronic payment transaction technologies. Here, I immerse myself in the intricate world
-                        of Java, wielding tools like Spring Boot, REST APIs, and harnessing the power of GIT for version
-                        control. Navigating through the labyrinth of Bitbucket and Linux environments is second nature
-                        as I orchestrate seamless integrations and optimizations.
-
-                        My technical odyssey commenced during my B.Tech, where I delved deep into the realms of J2SE and J2EE. It was here that I sculpted HACKIES, a dynamic web application, serving as a testament to my prowess in the domain. Fuelled by a passion for optimization,
-                        I honed my skills in Data Structures and Algorithms, crafting elegant solutions to intricate problems.
-                    </p> <a href="https://drive.google.com/file/d/1g1h6V1DYVtM0i9vUtfjpcWIukB1T6qQz/view?usp=sharing"
+                        Skilled Java Backend Engineer with 3.8+ years of experience in building robust, scalable backend systems and data-driven microservices. Proficient in developing high-performance Processor Interface Modules (PIMs), RESTful APIs, and real-time data caching pipelines using Java, Spring Boot, and PostgreSQL. Hands-on experience in cloud-based data integration (Snowflake to Postgres), financial data standards (ISO8583, AS2805), and performance optimization. Strong in unit testing with JUnit/Mockito, release management, and CI/CD pipelines using Jenkins and Azure DevOps. Adept at debugging, system design, and delivering backend solutions in Agile environments.
+                    </p> <a href="https://bit.ly/46aIMs9"
                             target="_blank">Download CV</a>
                 </div>
             </div>
@@ -89,8 +80,8 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>"I possess proficiency in Java, Spring Boot, REST APIs, GIT, Linux, and JSON, with hands-on
-                        experience at Verifone, coupled with a strong foundation in Data Structures and Algorithms,
+                    <p>"I possess proficiency in Java, Spring Boot, REST APIs, LLD , System Design , Microservices, , Unit Testing , Automation Testing, GIT, Linux, and JSON, with hands-on
+                        experience at Verifone and Blue Yonder, coupled with a strong foundation in Data Structures and Algorithms,
                         along with adept problem-solving skills."</p> <a href="https://drive.google.com/file/d/1g1h6V1DYVtM0i9vUtfjpcWIukB1T6qQz/view?usp=sharing" target="_blank">Read more</a>
                 </div>
                 <div class="column right">
@@ -118,14 +109,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>GIT</span>
-                            <span>50%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>JSON</span>
-                            <span>85%</span>
+                            <span>LLD</span>
+                            <span>80%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -166,7 +157,23 @@
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="serv-content">
+                 <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Interactive UI Cache</div>
+                        <p>Developed a high-performance caching solution to fetch data from Snowflake based on offer team criteria and replicate it
+into a PostgreSQL database.
+• Enabled faster downstream access and reduced response times by optimizing data availability through intelligent caching
+• Ensured efficient data sync between Snowflake and Postgres with minimal latency and fault tolerance. </p>  </div>
                 <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">PIMS (NZ Links and Settlement):</div>
+                        <p>A Project with industry-level tech stacks for New Zealand and Australian Banks.
+• Developed robust POS and settlement systems for leading New Zealand and Australian banks, enabling real-time credit
+and debit transaction processing and settlement via Verifone Gateway.
+• Mapped and implemented financial data elements aligned with ISO8583 and AS2805 standards</p></div>
+<div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Employee Management System</div>
@@ -216,14 +223,14 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Varanasi, Uttar Pradesh</div>
+                                <div class="sub-title">Hyderabad, Telangana</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">arpitsrivastava467@gmail.com</div>
+                                <div class="sub-title">arpits0395@gmail.com</div>
                             </div>
                         </div>
                     </div>
